// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ContributorsBuilder renders builder with sidebar: initialRenderEditing 1`] = `
<DocumentFragment>
  <div
    class="contributor-builder-root h-100 editing"
  >
    <div
      class="criteria-builder-section-sidebar overflow-hidden position-fixed criteria-builder-section-sidebar--with-warning"
    >
      <div
        aria-label="segments-contributors-panel"
        class="criteria-sidebar-root d-flex flex-column position-absolute"
        role="tabpanel"
        tabindex="-1"
      >
        <div
          class="sidebar-header"
        >
          properties
        </div>
        <div
          class="sidebar-search"
        >
          <div
            class="input-group"
          >
            <div
              class="input-group-item"
            >
              <input
                aria-label="search-properties"
                class="form-control input-group-inset input-group-inset-after"
                data-testid="search-input"
                placeholder="search-properties"
                type="text"
                value=""
              />
              <div
                class="input-group-inset-item input-group-inset-item-after"
              >
                <button
                  aria-label="search-properties"
                  class="btn btn-unstyled"
                  data-testid="search-button"
                  title="search-properties"
                  type="button"
                >
                  <svg
                    class="lexicon-icon lexicon-icon-search"
                    role="presentation"
                  >
                    <use
                      xlink:href="#search"
                    />
                  </svg>
                </button>
              </div>
            </div>
          </div>
        </div>
        <div
          class="overflow-auto position-relative sidebar-collapse"
        >
          <ul
            class="c-mb-0 c-pl-0 d-flex sidebar-collapse-groups"
          >
            <li
              class="d-flex flex-column sidebar-collapse-item sidebar-collapse-user active"
            >
              <a
                class="d-flex justify-content-between position-relative sidebar-collapse-header text-decoration-none text-uppercase"
                tabindex="0"
              >
                User
                <span>
                  <svg
                    class="lexicon-icon lexicon-icon-angle-right active"
                    role="presentation"
                  >
                    <use
                      xlink:href="#angle-right"
                    />
                  </svg>
                </span>
              </a>
              <div
                class="flex-grow-1 overflow-y-auto sidebar-collapse-body"
              >
                <p
                  class="c-pt-3 c-px-4 text-secondary"
                >
                  inherited-attributes-are-not-taken-into-account-to-include-members-in-segments
                </p>
                <ul
                  class="c-pl-0"
                >
                  <li
                    class="align-items-center criteria-sidebar-item-root c-py-2 c-pr-3 c-pl-3 c-my-1 c-mx-0 d-flex  color--user"
                    draggable="true"
                    tabindex="0"
                  >
                    <span
                      class="inline-item"
                    >
                      <svg
                        class="lexicon-icon lexicon-icon-drag"
                        role="presentation"
                      >
                        <use
                          xlink:href="#drag"
                        />
                      </svg>
                    </span>
                    <span
                      class="c-mx-2 c-my-0 criteria-sidebar-item-type sticker sticker-dark"
                    >
                      <span
                        class="inline-item"
                      >
                        <svg
                          class="lexicon-icon lexicon-icon-text"
                          role="presentation"
                        >
                          <use
                            xlink:href="#text"
                          />
                        </svg>
                      </span>
                    </span>
                    Ancestor Organization IDs
                  </li>
                  <li
                    class="align-items-center criteria-sidebar-item-root c-py-2 c-pr-3 c-pl-3 c-my-1 c-mx-0 d-flex  color--user"
                    draggable="true"
                    tabindex="0"
                  >
                    <span
                      class="inline-item"
                    >
                      <svg
                        class="lexicon-icon lexicon-icon-drag"
                        role="presentation"
                      >
                        <use
                          xlink:href="#drag"
                        />
                      </svg>
                    </span>
                    <span
                      class="c-mx-2 c-my-0 criteria-sidebar-item-type sticker sticker-dark"
                    >
                      <span
                        class="inline-item"
                      >
                        <svg
                          class="lexicon-icon lexicon-icon-text"
                          role="presentation"
                        >
                          <use
                            xlink:href="#text"
                          />
                        </svg>
                      </span>
                    </span>
                    Class PK
                  </li>
                  <li
                    class="align-items-center criteria-sidebar-item-root c-py-2 c-pr-3 c-pl-3 c-my-1 c-mx-0 d-flex  color--user"
                    draggable="true"
                    tabindex="0"
                  >
                    <span
                      class="inline-item"
                    >
                      <svg
                        class="lexicon-icon lexicon-icon-drag"
                        role="presentation"
                      >
                        <use
                          xlink:href="#drag"
                        />
                      </svg>
                    </span>
                    <span
                      class="c-mx-2 c-my-0 criteria-sidebar-item-type sticker sticker-dark"
                    >
                      <span
                        class="inline-item"
                      >
                        <svg
                          class="lexicon-icon lexicon-icon-text"
                          role="presentation"
                        >
                          <use
                            xlink:href="#text"
                          />
                        </svg>
                      </span>
                    </span>
                    Company ID
                  </li>
                  <li
                    class="align-items-center criteria-sidebar-item-root c-py-2 c-pr-3 c-pl-3 c-my-1 c-mx-0 d-flex  color--user"
                    draggable="true"
                    tabindex="0"
                  >
                    <span
                      class="inline-item"
                    >
                      <svg
                        class="lexicon-icon lexicon-icon-drag"
                        role="presentation"
                      >
                        <use
                          xlink:href="#drag"
                        />
                      </svg>
                    </span>
                    <span
                      class="c-mx-2 c-my-0 criteria-sidebar-item-type sticker sticker-dark"
                    >
                      <span
                        class="inline-item"
                      >
                        <svg
                          class="lexicon-icon lexicon-icon-date"
                          role="presentation"
                        >
                          <use
                            xlink:href="#date"
                          />
                        </svg>
                      </span>
                    </span>
                    Date Modified
                  </li>
                  <li
                    class="align-items-center criteria-sidebar-item-root c-py-2 c-pr-3 c-pl-3 c-my-1 c-mx-0 d-flex  color--user"
                    draggable="true"
                    tabindex="0"
                  >
                    <span
                      class="inline-item"
                    >
                      <svg
                        class="lexicon-icon lexicon-icon-drag"
                        role="presentation"
                      >
                        <use
                          xlink:href="#drag"
                        />
                      </svg>
                    </span>
                    <span
                      class="c-mx-2 c-my-0 criteria-sidebar-item-type sticker sticker-dark"
                    >
                      <span
                        class="inline-item"
                      >
                        <svg
                          class="lexicon-icon lexicon-icon-text"
                          role="presentation"
                        >
                          <use
                            xlink:href="#text"
                          />
                        </svg>
                      </span>
                    </span>
                    Email Address
                  </li>
                  <li
                    class="align-items-center criteria-sidebar-item-root c-py-2 c-pr-3 c-pl-3 c-my-1 c-mx-0 d-flex  color--user"
                    draggable="true"
                    tabindex="0"
                  >
                    <span
                      class="inline-item"
                    >
                      <svg
                        class="lexicon-icon lexicon-icon-drag"
                        role="presentation"
                      >
                        <use
                          xlink:href="#drag"
                        />
                      </svg>
                    </span>
                    <span
                      class="c-mx-2 c-my-0 criteria-sidebar-item-type sticker sticker-dark"
                    >
                      <span
                        class="inline-item"
                      >
                        <svg
                          class="lexicon-icon lexicon-icon-text"
                          role="presentation"
                        >
                          <use
                            xlink:href="#text"
                          />
                        </svg>
                      </span>
                    </span>
                    First Name
                  </li>
                  <li
                    class="align-items-center criteria-sidebar-item-root c-py-2 c-pr-3 c-pl-3 c-my-1 c-mx-0 d-flex  color--user"
                    draggable="true"
                    tabindex="0"
                  >
                    <span
                      class="inline-item"
                    >
                      <svg
                        class="lexicon-icon lexicon-icon-drag"
                        role="presentation"
                      >
                        <use
                          xlink:href="#drag"
                        />
                      </svg>
                    </span>
                    <span
                      class="c-mx-2 c-my-0 criteria-sidebar-item-type sticker sticker-dark"
                    >
                      <span
                        class="inline-item"
                      >
                        <svg
                          class="lexicon-icon lexicon-icon-text"
                          role="presentation"
                        >
                          <use
                            xlink:href="#text"
                          />
                        </svg>
                      </span>
                    </span>
                    Group ID
                  </li>
                  <li
                    class="align-items-center criteria-sidebar-item-root c-py-2 c-pr-3 c-pl-3 c-my-1 c-mx-0 d-flex  color--user"
                    draggable="true"
                    tabindex="0"
                  >
                    <span
                      class="inline-item"
                    >
                      <svg
                        class="lexicon-icon lexicon-icon-drag"
                        role="presentation"
                      >
                        <use
                          xlink:href="#drag"
                        />
                      </svg>
                    </span>
                    <span
                      class="c-mx-2 c-my-0 criteria-sidebar-item-type sticker sticker-dark"
                    >
                      <span
                        class="inline-item"
                      >
                        <svg
                          class="lexicon-icon lexicon-icon-text"
                          role="presentation"
                        >
                          <use
                            xlink:href="#text"
                          />
                        </svg>
                      </span>
                    </span>
                    Group IDs
                  </li>
                  <li
                    class="align-items-center criteria-sidebar-item-root c-py-2 c-pr-3 c-pl-3 c-my-1 c-mx-0 d-flex  color--user"
                    draggable="true"
                    tabindex="0"
                  >
                    <span
                      class="inline-item"
                    >
                      <svg
                        class="lexicon-icon lexicon-icon-drag"
                        role="presentation"
                      >
                        <use
                          xlink:href="#drag"
                        />
                      </svg>
                    </span>
                    <span
                      class="c-mx-2 c-my-0 criteria-sidebar-item-type sticker sticker-dark"
                    >
                      <span
                        class="inline-item"
                      >
                        <svg
                          class="lexicon-icon lexicon-icon-text"
                          role="presentation"
                        >
                          <use
                            xlink:href="#text"
                          />
                        </svg>
                      </span>
                    </span>
                    Job Title
                  </li>
                  <li
                    class="align-items-center criteria-sidebar-item-root c-py-2 c-pr-3 c-pl-3 c-my-1 c-mx-0 d-flex  color--user"
                    draggable="true"
                    tabindex="0"
                  >
                    <span
                      class="inline-item"
                    >
                      <svg
                        class="lexicon-icon lexicon-icon-drag"
                        role="presentation"
                      >
                        <use
                          xlink:href="#drag"
                        />
                      </svg>
                    </span>
                    <span
                      class="c-mx-2 c-my-0 criteria-sidebar-item-type sticker sticker-dark"
                    >
                      <span
                        class="inline-item"
                      >
                        <svg
                          class="lexicon-icon lexicon-icon-text"
                          role="presentation"
                        >
                          <use
                            xlink:href="#text"
                          />
                        </svg>
                      </span>
                    </span>
                    Last Name
                  </li>
                  <li
                    class="align-items-center criteria-sidebar-item-root c-py-2 c-pr-3 c-pl-3 c-my-1 c-mx-0 d-flex  color--user"
                    draggable="true"
                    tabindex="0"
                  >
                    <span
                      class="inline-item"
                    >
                      <svg
                        class="lexicon-icon lexicon-icon-drag"
                        role="presentation"
                      >
                        <use
                          xlink:href="#drag"
                        />
                      </svg>
                    </span>
                    <span
                      class="c-mx-2 c-my-0 criteria-sidebar-item-type sticker sticker-dark"
                    >
                      <span
                        class="inline-item"
                      >
                        <svg
                          class="lexicon-icon lexicon-icon-text"
                          role="presentation"
                        >
                          <use
                            xlink:href="#text"
                          />
                        </svg>
                      </span>
                    </span>
                    Organization IDs
                  </li>
                  <li
                    class="align-items-center criteria-sidebar-item-root c-py-2 c-pr-3 c-pl-3 c-my-1 c-mx-0 d-flex  color--user"
                    draggable="true"
                    tabindex="0"
                  >
                    <span
                      class="inline-item"
                    >
                      <svg
                        class="lexicon-icon lexicon-icon-drag"
                        role="presentation"
                      >
                        <use
                          xlink:href="#drag"
                        />
                      </svg>
                    </span>
                    <span
                      class="c-mx-2 c-my-0 criteria-sidebar-item-type sticker sticker-dark"
                    >
                      <span
                        class="inline-item"
                      >
                        <svg
                          class="lexicon-icon lexicon-icon-text"
                          role="presentation"
                        >
                          <use
                            xlink:href="#text"
                          />
                        </svg>
                      </span>
                    </span>
                    Role IDs
                  </li>
                  <li
                    class="align-items-center criteria-sidebar-item-root c-py-2 c-pr-3 c-pl-3 c-my-1 c-mx-0 d-flex  color--user"
                    draggable="true"
                    tabindex="0"
                  >
                    <span
                      class="inline-item"
                    >
                      <svg
                        class="lexicon-icon lexicon-icon-drag"
                        role="presentation"
                      >
                        <use
                          xlink:href="#drag"
                        />
                      </svg>
                    </span>
                    <span
                      class="c-mx-2 c-my-0 criteria-sidebar-item-type sticker sticker-dark"
                    >
                      <span
                        class="inline-item"
                      >
                        <svg
                          class="lexicon-icon lexicon-icon-text"
                          role="presentation"
                        >
                          <use
                            xlink:href="#text"
                          />
                        </svg>
                      </span>
                    </span>
                    Scope Group ID
                  </li>
                  <li
                    class="align-items-center criteria-sidebar-item-root c-py-2 c-pr-3 c-pl-3 c-my-1 c-mx-0 d-flex  color--user"
                    draggable="true"
                    tabindex="0"
                  >
                    <span
                      class="inline-item"
                    >
                      <svg
                        class="lexicon-icon lexicon-icon-drag"
                        role="presentation"
                      >
                        <use
                          xlink:href="#drag"
                        />
                      </svg>
                    </span>
                    <span
                      class="c-mx-2 c-my-0 criteria-sidebar-item-type sticker sticker-dark"
                    >
                      <span
                        class="inline-item"
                      >
                        <svg
                          class="lexicon-icon lexicon-icon-text"
                          role="presentation"
                        >
                          <use
                            xlink:href="#text"
                          />
                        </svg>
                      </span>
                    </span>
                    Screen Name
                  </li>
                  <li
                    class="align-items-center criteria-sidebar-item-root c-py-2 c-pr-3 c-pl-3 c-my-1 c-mx-0 d-flex  color--user"
                    draggable="true"
                    tabindex="0"
                  >
                    <span
                      class="inline-item"
                    >
                      <svg
                        class="lexicon-icon lexicon-icon-drag"
                        role="presentation"
                      >
                        <use
                          xlink:href="#drag"
                        />
                      </svg>
                    </span>
                    <span
                      class="c-mx-2 c-my-0 criteria-sidebar-item-type sticker sticker-dark"
                    >
                      <span
                        class="inline-item"
                      >
                        <svg
                          class="lexicon-icon lexicon-icon-text"
                          role="presentation"
                        >
                          <use
                            xlink:href="#text"
                          />
                        </svg>
                      </span>
                    </span>
                    Team IDs
                  </li>
                  <li
                    class="align-items-center criteria-sidebar-item-root c-py-2 c-pr-3 c-pl-3 c-my-1 c-mx-0 d-flex  color--user"
                    draggable="true"
                    tabindex="0"
                  >
                    <span
                      class="inline-item"
                    >
                      <svg
                        class="lexicon-icon lexicon-icon-drag"
                        role="presentation"
                      >
                        <use
                          xlink:href="#drag"
                        />
                      </svg>
                    </span>
                    <span
                      class="c-mx-2 c-my-0 criteria-sidebar-item-type sticker sticker-dark"
                    >
                      <span
                        class="inline-item"
                      >
                        <svg
                          class="lexicon-icon lexicon-icon-text"
                          role="presentation"
                        >
                          <use
                            xlink:href="#text"
                          />
                        </svg>
                      </span>
                    </span>
                    User Group IDs
                  </li>
                  <li
                    class="align-items-center criteria-sidebar-item-root c-py-2 c-pr-3 c-pl-3 c-my-1 c-mx-0 d-flex  color--user"
                    draggable="true"
                    tabindex="0"
                  >
                    <span
                      class="inline-item"
                    >
                      <svg
                        class="lexicon-icon lexicon-icon-drag"
                        role="presentation"
                      >
                        <use
                          xlink:href="#drag"
                        />
                      </svg>
                    </span>
                    <span
                      class="c-mx-2 c-my-0 criteria-sidebar-item-type sticker sticker-dark"
                    >
                      <span
                        class="inline-item"
                      >
                        <svg
                          class="lexicon-icon lexicon-icon-text"
                          role="presentation"
                        >
                          <use
                            xlink:href="#text"
                          />
                        </svg>
                      </span>
                    </span>
                    User ID
                  </li>
                  <li
                    class="align-items-center criteria-sidebar-item-root c-py-2 c-pr-3 c-pl-3 c-my-1 c-mx-0 d-flex  color--user"
                    draggable="true"
                    tabindex="0"
                  >
                    <span
                      class="inline-item"
                    >
                      <svg
                        class="lexicon-icon lexicon-icon-drag"
                        role="presentation"
                      >
                        <use
                          xlink:href="#drag"
                        />
                      </svg>
                    </span>
                    <span
                      class="c-mx-2 c-my-0 criteria-sidebar-item-type sticker sticker-dark"
                    >
                      <span
                        class="inline-item"
                      >
                        <svg
                          class="lexicon-icon lexicon-icon-text"
                          role="presentation"
                        >
                          <use
                            xlink:href="#text"
                          />
                        </svg>
                      </span>
                    </span>
                    User Name
                  </li>
                </ul>
              </div>
            </li>
            <li
              class="d-flex flex-column sidebar-collapse-item sidebar-collapse-user-organization"
            >
              <a
                class="d-flex justify-content-between position-relative sidebar-collapse-header text-decoration-none text-uppercase"
                tabindex="0"
              >
                User Organization
                <span>
                  <svg
                    class="lexicon-icon lexicon-icon-angle-right"
                    role="presentation"
                  >
                    <use
                      xlink:href="#angle-right"
                    />
                  </svg>
                </span>
              </a>
            </li>
          </ul>
        </div>
      </div>
    </div>
    <div
      class="c-pr-0 criteria-builder-section-main d-flex h-100 w-100"
    >
      <div
        class="contributor-container h-100 overflow-auto position-absolute w-100"
      >
        <div
          class="container-fluid container-fluid-max-xl"
        >
          <div
            class="c-p-4 content-wrapper"
          >
            <div
              class="c-pb-4 sheet"
            >
              <div
                class="c-mb-4 d-flex flex-wrap justify-content-between mb-4"
              >
                <h2
                  class="c-mb-2 sheet-title"
                >
                  conditions
                </h2>
                <div
                  class="c-ml-2 criterion-string"
                >
                  <div
                    class="btn-group"
                  >
                    <div
                      class="btn-group-item inline-item"
                    >
                      <span
                        class="c-mr-4"
                      >
                        conditions-match
                        <b
                          class="c-ml-2 font-weight-bold text-dark"
                        >
                          x-members
                        </b>
                      </span>
                      <button
                        class="btn btn-sm btn-secondary"
                        type="button"
                      >
                        view-members
                      </button>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`ContributorsBuilder renders builder without sidebar: initialRenderNotEditing 1`] = `
<DocumentFragment>
  <div
    class="contributor-builder-root h-100"
  >
    <div
      class="criteria-builder-section-sidebar overflow-hidden position-fixed criteria-builder-section-sidebar--with-warning"
    >
      <div
        aria-label="segments-contributors-panel"
        class="criteria-sidebar-root d-flex flex-column position-absolute"
        role="tabpanel"
        tabindex="-1"
      >
        <div
          class="sidebar-header"
        >
          properties
        </div>
        <div
          class="sidebar-search"
        >
          <div
            class="input-group"
          >
            <div
              class="input-group-item"
            >
              <input
                aria-label="search-properties"
                class="form-control input-group-inset input-group-inset-after"
                data-testid="search-input"
                placeholder="search-properties"
                type="text"
                value=""
              />
              <div
                class="input-group-inset-item input-group-inset-item-after"
              >
                <button
                  aria-label="search-properties"
                  class="btn btn-unstyled"
                  data-testid="search-button"
                  title="search-properties"
                  type="button"
                >
                  <svg
                    class="lexicon-icon lexicon-icon-search"
                    role="presentation"
                  >
                    <use
                      xlink:href="#search"
                    />
                  </svg>
                </button>
              </div>
            </div>
          </div>
        </div>
        <div
          class="overflow-auto position-relative sidebar-collapse"
        >
          <ul
            class="c-mb-0 c-pl-0 d-flex sidebar-collapse-groups"
          >
            <li
              class="d-flex flex-column sidebar-collapse-item sidebar-collapse-user active"
            >
              <a
                class="d-flex justify-content-between position-relative sidebar-collapse-header text-decoration-none text-uppercase"
                tabindex="0"
              >
                User
                <span>
                  <svg
                    class="lexicon-icon lexicon-icon-angle-right active"
                    role="presentation"
                  >
                    <use
                      xlink:href="#angle-right"
                    />
                  </svg>
                </span>
              </a>
              <div
                class="flex-grow-1 overflow-y-auto sidebar-collapse-body"
              >
                <p
                  class="c-pt-3 c-px-4 text-secondary"
                >
                  inherited-attributes-are-not-taken-into-account-to-include-members-in-segments
                </p>
                <ul
                  class="c-pl-0"
                >
                  <li
                    class="align-items-center criteria-sidebar-item-root c-py-2 c-pr-3 c-pl-3 c-my-1 c-mx-0 d-flex  color--user"
                    draggable="true"
                    tabindex="0"
                  >
                    <span
                      class="inline-item"
                    >
                      <svg
                        class="lexicon-icon lexicon-icon-drag"
                        role="presentation"
                      >
                        <use
                          xlink:href="#drag"
                        />
                      </svg>
                    </span>
                    <span
                      class="c-mx-2 c-my-0 criteria-sidebar-item-type sticker sticker-dark"
                    >
                      <span
                        class="inline-item"
                      >
                        <svg
                          class="lexicon-icon lexicon-icon-text"
                          role="presentation"
                        >
                          <use
                            xlink:href="#text"
                          />
                        </svg>
                      </span>
                    </span>
                    Ancestor Organization IDs
                  </li>
                  <li
                    class="align-items-center criteria-sidebar-item-root c-py-2 c-pr-3 c-pl-3 c-my-1 c-mx-0 d-flex  color--user"
                    draggable="true"
                    tabindex="0"
                  >
                    <span
                      class="inline-item"
                    >
                      <svg
                        class="lexicon-icon lexicon-icon-drag"
                        role="presentation"
                      >
                        <use
                          xlink:href="#drag"
                        />
                      </svg>
                    </span>
                    <span
                      class="c-mx-2 c-my-0 criteria-sidebar-item-type sticker sticker-dark"
                    >
                      <span
                        class="inline-item"
                      >
                        <svg
                          class="lexicon-icon lexicon-icon-text"
                          role="presentation"
                        >
                          <use
                            xlink:href="#text"
                          />
                        </svg>
                      </span>
                    </span>
                    Class PK
                  </li>
                  <li
                    class="align-items-center criteria-sidebar-item-root c-py-2 c-pr-3 c-pl-3 c-my-1 c-mx-0 d-flex  color--user"
                    draggable="true"
                    tabindex="0"
                  >
                    <span
                      class="inline-item"
                    >
                      <svg
                        class="lexicon-icon lexicon-icon-drag"
                        role="presentation"
                      >
                        <use
                          xlink:href="#drag"
                        />
                      </svg>
                    </span>
                    <span
                      class="c-mx-2 c-my-0 criteria-sidebar-item-type sticker sticker-dark"
                    >
                      <span
                        class="inline-item"
                      >
                        <svg
                          class="lexicon-icon lexicon-icon-text"
                          role="presentation"
                        >
                          <use
                            xlink:href="#text"
                          />
                        </svg>
                      </span>
                    </span>
                    Company ID
                  </li>
                  <li
                    class="align-items-center criteria-sidebar-item-root c-py-2 c-pr-3 c-pl-3 c-my-1 c-mx-0 d-flex  color--user"
                    draggable="true"
                    tabindex="0"
                  >
                    <span
                      class="inline-item"
                    >
                      <svg
                        class="lexicon-icon lexicon-icon-drag"
                        role="presentation"
                      >
                        <use
                          xlink:href="#drag"
                        />
                      </svg>
                    </span>
                    <span
                      class="c-mx-2 c-my-0 criteria-sidebar-item-type sticker sticker-dark"
                    >
                      <span
                        class="inline-item"
                      >
                        <svg
                          class="lexicon-icon lexicon-icon-date"
                          role="presentation"
                        >
                          <use
                            xlink:href="#date"
                          />
                        </svg>
                      </span>
                    </span>
                    Date Modified
                  </li>
                  <li
                    class="align-items-center criteria-sidebar-item-root c-py-2 c-pr-3 c-pl-3 c-my-1 c-mx-0 d-flex  color--user"
                    draggable="true"
                    tabindex="0"
                  >
                    <span
                      class="inline-item"
                    >
                      <svg
                        class="lexicon-icon lexicon-icon-drag"
                        role="presentation"
                      >
                        <use
                          xlink:href="#drag"
                        />
                      </svg>
                    </span>
                    <span
                      class="c-mx-2 c-my-0 criteria-sidebar-item-type sticker sticker-dark"
                    >
                      <span
                        class="inline-item"
                      >
                        <svg
                          class="lexicon-icon lexicon-icon-text"
                          role="presentation"
                        >
                          <use
                            xlink:href="#text"
                          />
                        </svg>
                      </span>
                    </span>
                    Email Address
                  </li>
                  <li
                    class="align-items-center criteria-sidebar-item-root c-py-2 c-pr-3 c-pl-3 c-my-1 c-mx-0 d-flex  color--user"
                    draggable="true"
                    tabindex="0"
                  >
                    <span
                      class="inline-item"
                    >
                      <svg
                        class="lexicon-icon lexicon-icon-drag"
                        role="presentation"
                      >
                        <use
                          xlink:href="#drag"
                        />
                      </svg>
                    </span>
                    <span
                      class="c-mx-2 c-my-0 criteria-sidebar-item-type sticker sticker-dark"
                    >
                      <span
                        class="inline-item"
                      >
                        <svg
                          class="lexicon-icon lexicon-icon-text"
                          role="presentation"
                        >
                          <use
                            xlink:href="#text"
                          />
                        </svg>
                      </span>
                    </span>
                    First Name
                  </li>
                  <li
                    class="align-items-center criteria-sidebar-item-root c-py-2 c-pr-3 c-pl-3 c-my-1 c-mx-0 d-flex  color--user"
                    draggable="true"
                    tabindex="0"
                  >
                    <span
                      class="inline-item"
                    >
                      <svg
                        class="lexicon-icon lexicon-icon-drag"
                        role="presentation"
                      >
                        <use
                          xlink:href="#drag"
                        />
                      </svg>
                    </span>
                    <span
                      class="c-mx-2 c-my-0 criteria-sidebar-item-type sticker sticker-dark"
                    >
                      <span
                        class="inline-item"
                      >
                        <svg
                          class="lexicon-icon lexicon-icon-text"
                          role="presentation"
                        >
                          <use
                            xlink:href="#text"
                          />
                        </svg>
                      </span>
                    </span>
                    Group ID
                  </li>
                  <li
                    class="align-items-center criteria-sidebar-item-root c-py-2 c-pr-3 c-pl-3 c-my-1 c-mx-0 d-flex  color--user"
                    draggable="true"
                    tabindex="0"
                  >
                    <span
                      class="inline-item"
                    >
                      <svg
                        class="lexicon-icon lexicon-icon-drag"
                        role="presentation"
                      >
                        <use
                          xlink:href="#drag"
                        />
                      </svg>
                    </span>
                    <span
                      class="c-mx-2 c-my-0 criteria-sidebar-item-type sticker sticker-dark"
                    >
                      <span
                        class="inline-item"
                      >
                        <svg
                          class="lexicon-icon lexicon-icon-text"
                          role="presentation"
                        >
                          <use
                            xlink:href="#text"
                          />
                        </svg>
                      </span>
                    </span>
                    Group IDs
                  </li>
                  <li
                    class="align-items-center criteria-sidebar-item-root c-py-2 c-pr-3 c-pl-3 c-my-1 c-mx-0 d-flex  color--user"
                    draggable="true"
                    tabindex="0"
                  >
                    <span
                      class="inline-item"
                    >
                      <svg
                        class="lexicon-icon lexicon-icon-drag"
                        role="presentation"
                      >
                        <use
                          xlink:href="#drag"
                        />
                      </svg>
                    </span>
                    <span
                      class="c-mx-2 c-my-0 criteria-sidebar-item-type sticker sticker-dark"
                    >
                      <span
                        class="inline-item"
                      >
                        <svg
                          class="lexicon-icon lexicon-icon-text"
                          role="presentation"
                        >
                          <use
                            xlink:href="#text"
                          />
                        </svg>
                      </span>
                    </span>
                    Job Title
                  </li>
                  <li
                    class="align-items-center criteria-sidebar-item-root c-py-2 c-pr-3 c-pl-3 c-my-1 c-mx-0 d-flex  color--user"
                    draggable="true"
                    tabindex="0"
                  >
                    <span
                      class="inline-item"
                    >
                      <svg
                        class="lexicon-icon lexicon-icon-drag"
                        role="presentation"
                      >
                        <use
                          xlink:href="#drag"
                        />
                      </svg>
                    </span>
                    <span
                      class="c-mx-2 c-my-0 criteria-sidebar-item-type sticker sticker-dark"
                    >
                      <span
                        class="inline-item"
                      >
                        <svg
                          class="lexicon-icon lexicon-icon-text"
                          role="presentation"
                        >
                          <use
                            xlink:href="#text"
                          />
                        </svg>
                      </span>
                    </span>
                    Last Name
                  </li>
                  <li
                    class="align-items-center criteria-sidebar-item-root c-py-2 c-pr-3 c-pl-3 c-my-1 c-mx-0 d-flex  color--user"
                    draggable="true"
                    tabindex="0"
                  >
                    <span
                      class="inline-item"
                    >
                      <svg
                        class="lexicon-icon lexicon-icon-drag"
                        role="presentation"
                      >
                        <use
                          xlink:href="#drag"
                        />
                      </svg>
                    </span>
                    <span
                      class="c-mx-2 c-my-0 criteria-sidebar-item-type sticker sticker-dark"
                    >
                      <span
                        class="inline-item"
                      >
                        <svg
                          class="lexicon-icon lexicon-icon-text"
                          role="presentation"
                        >
                          <use
                            xlink:href="#text"
                          />
                        </svg>
                      </span>
                    </span>
                    Organization IDs
                  </li>
                  <li
                    class="align-items-center criteria-sidebar-item-root c-py-2 c-pr-3 c-pl-3 c-my-1 c-mx-0 d-flex  color--user"
                    draggable="true"
                    tabindex="0"
                  >
                    <span
                      class="inline-item"
                    >
                      <svg
                        class="lexicon-icon lexicon-icon-drag"
                        role="presentation"
                      >
                        <use
                          xlink:href="#drag"
                        />
                      </svg>
                    </span>
                    <span
                      class="c-mx-2 c-my-0 criteria-sidebar-item-type sticker sticker-dark"
                    >
                      <span
                        class="inline-item"
                      >
                        <svg
                          class="lexicon-icon lexicon-icon-text"
                          role="presentation"
                        >
                          <use
                            xlink:href="#text"
                          />
                        </svg>
                      </span>
                    </span>
                    Role IDs
                  </li>
                  <li
                    class="align-items-center criteria-sidebar-item-root c-py-2 c-pr-3 c-pl-3 c-my-1 c-mx-0 d-flex  color--user"
                    draggable="true"
                    tabindex="0"
                  >
                    <span
                      class="inline-item"
                    >
                      <svg
                        class="lexicon-icon lexicon-icon-drag"
                        role="presentation"
                      >
                        <use
                          xlink:href="#drag"
                        />
                      </svg>
                    </span>
                    <span
                      class="c-mx-2 c-my-0 criteria-sidebar-item-type sticker sticker-dark"
                    >
                      <span
                        class="inline-item"
                      >
                        <svg
                          class="lexicon-icon lexicon-icon-text"
                          role="presentation"
                        >
                          <use
                            xlink:href="#text"
                          />
                        </svg>
                      </span>
                    </span>
                    Scope Group ID
                  </li>
                  <li
                    class="align-items-center criteria-sidebar-item-root c-py-2 c-pr-3 c-pl-3 c-my-1 c-mx-0 d-flex  color--user"
                    draggable="true"
                    tabindex="0"
                  >
                    <span
                      class="inline-item"
                    >
                      <svg
                        class="lexicon-icon lexicon-icon-drag"
                        role="presentation"
                      >
                        <use
                          xlink:href="#drag"
                        />
                      </svg>
                    </span>
                    <span
                      class="c-mx-2 c-my-0 criteria-sidebar-item-type sticker sticker-dark"
                    >
                      <span
                        class="inline-item"
                      >
                        <svg
                          class="lexicon-icon lexicon-icon-text"
                          role="presentation"
                        >
                          <use
                            xlink:href="#text"
                          />
                        </svg>
                      </span>
                    </span>
                    Screen Name
                  </li>
                  <li
                    class="align-items-center criteria-sidebar-item-root c-py-2 c-pr-3 c-pl-3 c-my-1 c-mx-0 d-flex  color--user"
                    draggable="true"
                    tabindex="0"
                  >
                    <span
                      class="inline-item"
                    >
                      <svg
                        class="lexicon-icon lexicon-icon-drag"
                        role="presentation"
                      >
                        <use
                          xlink:href="#drag"
                        />
                      </svg>
                    </span>
                    <span
                      class="c-mx-2 c-my-0 criteria-sidebar-item-type sticker sticker-dark"
                    >
                      <span
                        class="inline-item"
                      >
                        <svg
                          class="lexicon-icon lexicon-icon-text"
                          role="presentation"
                        >
                          <use
                            xlink:href="#text"
                          />
                        </svg>
                      </span>
                    </span>
                    Team IDs
                  </li>
                  <li
                    class="align-items-center criteria-sidebar-item-root c-py-2 c-pr-3 c-pl-3 c-my-1 c-mx-0 d-flex  color--user"
                    draggable="true"
                    tabindex="0"
                  >
                    <span
                      class="inline-item"
                    >
                      <svg
                        class="lexicon-icon lexicon-icon-drag"
                        role="presentation"
                      >
                        <use
                          xlink:href="#drag"
                        />
                      </svg>
                    </span>
                    <span
                      class="c-mx-2 c-my-0 criteria-sidebar-item-type sticker sticker-dark"
                    >
                      <span
                        class="inline-item"
                      >
                        <svg
                          class="lexicon-icon lexicon-icon-text"
                          role="presentation"
                        >
                          <use
                            xlink:href="#text"
                          />
                        </svg>
                      </span>
                    </span>
                    User Group IDs
                  </li>
                  <li
                    class="align-items-center criteria-sidebar-item-root c-py-2 c-pr-3 c-pl-3 c-my-1 c-mx-0 d-flex  color--user"
                    draggable="true"
                    tabindex="0"
                  >
                    <span
                      class="inline-item"
                    >
                      <svg
                        class="lexicon-icon lexicon-icon-drag"
                        role="presentation"
                      >
                        <use
                          xlink:href="#drag"
                        />
                      </svg>
                    </span>
                    <span
                      class="c-mx-2 c-my-0 criteria-sidebar-item-type sticker sticker-dark"
                    >
                      <span
                        class="inline-item"
                      >
                        <svg
                          class="lexicon-icon lexicon-icon-text"
                          role="presentation"
                        >
                          <use
                            xlink:href="#text"
                          />
                        </svg>
                      </span>
                    </span>
                    User ID
                  </li>
                  <li
                    class="align-items-center criteria-sidebar-item-root c-py-2 c-pr-3 c-pl-3 c-my-1 c-mx-0 d-flex  color--user"
                    draggable="true"
                    tabindex="0"
                  >
                    <span
                      class="inline-item"
                    >
                      <svg
                        class="lexicon-icon lexicon-icon-drag"
                        role="presentation"
                      >
                        <use
                          xlink:href="#drag"
                        />
                      </svg>
                    </span>
                    <span
                      class="c-mx-2 c-my-0 criteria-sidebar-item-type sticker sticker-dark"
                    >
                      <span
                        class="inline-item"
                      >
                        <svg
                          class="lexicon-icon lexicon-icon-text"
                          role="presentation"
                        >
                          <use
                            xlink:href="#text"
                          />
                        </svg>
                      </span>
                    </span>
                    User Name
                  </li>
                </ul>
              </div>
            </li>
            <li
              class="d-flex flex-column sidebar-collapse-item sidebar-collapse-user-organization"
            >
              <a
                class="d-flex justify-content-between position-relative sidebar-collapse-header text-decoration-none text-uppercase"
                tabindex="0"
              >
                User Organization
                <span>
                  <svg
                    class="lexicon-icon lexicon-icon-angle-right"
                    role="presentation"
                  >
                    <use
                      xlink:href="#angle-right"
                    />
                  </svg>
                </span>
              </a>
            </li>
          </ul>
        </div>
      </div>
    </div>
    <div
      class="c-pr-0 criteria-builder-section-main d-flex h-100 w-100"
    >
      <div
        class="contributor-container h-100 overflow-auto position-absolute w-100"
      >
        <div
          class="container-fluid container-fluid-max-xl"
        >
          <div
            class="c-p-4 content-wrapper"
          >
            <div
              class="c-pb-4 sheet"
            >
              <div
                class="c-mb-4 d-flex flex-wrap justify-content-between mb-4"
              >
                <h2
                  class="c-mb-2 sheet-title"
                >
                  conditions
                </h2>
                <div
                  class="c-ml-2 criterion-string"
                >
                  <div
                    class="btn-group"
                  >
                    <div
                      class="btn-group-item inline-item"
                    >
                      <span
                        class="c-mr-4"
                      >
                        conditions-match
                        <b
                          class="c-ml-2 font-weight-bold text-dark"
                        >
                          x-members
                        </b>
                      </span>
                      <button
                        class="btn btn-sm btn-secondary"
                        type="button"
                      >
                        view-members
                      </button>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;
